fix ruleset scrollbars

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -39,7 +39,7 @@
     border-radius: 1rem;
     //border: 1px solid #666666;
     padding: 1rem;
-    overflow: scroll;
+    overflow: auto;
     box-shadow: 0 .5rem 5rem #666666;
 
     h1 {
